cloudenv-userid.yaml
# =========================
# DolphinDB StatefulSet + Service
# =========================
apiVersion: v1
kind: Service
metadata:
  name: dolphindb-user001
spec:
  type: ClusterIP    
  selector:
    app: dolphindb-user001
  ports:
    - name: api
      port: 8848
      targetPort: 8848
      protocol: TCP   
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dolphindb-user001
spec:
  serviceName: dolphindb-user001
  replicas: 1
  selector:
    matchLabels:
      app: dolphindb-user001
  template:
    metadata:
      labels:
        app: dolphindb-user001
    spec:
      containers:
      - name: dolphindb
        image: registry.cn-hangzhou.aliyuncs.com/dolphindbit/dolphindb:v3.00.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8848
        volumeMounts:
        - name: dolphindb-data
          mountPath: /opt/dolphindb/data
  volumeClaimTemplates:
  - metadata:
      name: dolphindb-data
    spec:
      storageClassName: local-path
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
---
# =========================
# code-server Deployment + Service
# =========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codeserver-user001
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codeserver-user001
  template:
    metadata:
      labels:
        app: codeserver-user001
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: code-server
        image: codeserver-ddb:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
        volumeMounts:
          - name: config-volume
            mountPath: /home/coder/.local/share/code-server/Machine/settings.json
            subPath: settings.json
      volumes:
      - name: config-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: codeserver-user001
spec:
  type: NodePort
  selector:
    app: codeserver-user001
  ports:
    - port: 3000
      targetPort: 3000
