codeserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codeserver-user001
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codeserver-user001
  template:
    metadata:
      labels:
        app: codeserver-user001
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: code-server
        image: codeserver-ddb:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
        volumeMounts:
          - name: config-volume
            mountPath: /home/coder/.local/share/code-server/Machine/settings.json
            subPath: settings.json
      volumes:
      - name: config-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: codeserver-user001
spec:
  type: NodePort
  selector:
    app: codeserver-user001
  ports:
    - port: 3000
      targetPort: 3000
