dolphindb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dolphindb-user001
spec:
  type: ClusterIP
  selector:
    app: dolphindb-user001
  ports:
    - name: api
      port: 8848
      targetPort: 8848
      protocol: TCP
